// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setDefaults fix derived field 1`] = `
Object {
  "derived": true,
  "name": "user",
}
`;

exports[`setDefaults fix derived field 2`] = `Array []`;

exports[`setDefaults fix derived field 3`] = `
Object {
  "derived": true,
  "indexed": false,
  "name": "user",
  "persistent": false,
  "required": false,
}
`;

exports[`setDefaults fix identity field 1`] = `
Object {
  "identity": true,
  "name": "user",
}
`;

exports[`setDefaults fix identity field 2`] = `Array []`;

exports[`setDefaults fix identity field 3`] = `
Object {
  "derived": false,
  "identity": true,
  "indexed": true,
  "name": "user",
  "persistent": true,
  "required": true,
}
`;

exports[`setDefaults fix indexed field 1`] = `
Object {
  "indexed": true,
  "name": "user",
}
`;

exports[`setDefaults fix indexed field 2`] = `Array []`;

exports[`setDefaults fix indexed field 3`] = `
Object {
  "derived": false,
  "indexed": true,
  "name": "user",
  "persistent": true,
  "required": false,
}
`;

exports[`setDefaults fix persistend-derived field 1`] = `
Object {
  "derived": true,
  "name": "user",
  "persistent": true,
}
`;

exports[`setDefaults fix persistend-derived field 2`] = `Array []`;

exports[`setDefaults fix persistend-derived field 3`] = `
Object {
  "derived": true,
  "indexed": false,
  "name": "user",
  "persistent": true,
  "required": false,
}
`;

exports[`setDefaults fix simple field 1`] = `
Object {
  "name": "user",
}
`;

exports[`setDefaults fix simple field 2`] = `Array []`;

exports[`setDefaults fix simple field 3`] = `
Object {
  "derived": false,
  "indexed": false,
  "name": "user",
  "persistent": true,
  "required": false,
}
`;
